--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
       <!--  -->
       <div class="login-box login" style="display: none;">
         <h1>Login</h1>
-        <form action="/login" method="post">
+        <form action="/login" method="get">
           <div class="role-container">
             <label>
               <input type="radio" name="role" value="host" required>
